fix projects on mobile

--- a/style.css
+++ b/style.css
@@ -388,6 +388,13 @@ a {
 	transition: transform 1s;
 }
 
+@media(max-width: 767px){
+	.project img {
+		width: 100%;
+		height: auto;
+	}
+}
+
 /* ------------------------------------------------------------ *\
 	Socials
 \* ------------------------------------------------------------ */
